# hello-solana

./: Anchor.toml  Cargo.toml  LICENSE  README.md  package.json
client/: client.ts
programs/hello-solana/: Cargo.toml
programs/hello-solana/src/: lib.rs
tests/: anchor.ts
